# progeny-core

./: .coveragerc  CHANGELOG.md  README.md  middleware_config.yml  pyproject.toml  pytest.ini  setup.cfg
examples/: example_baked.yml
progeny/: setup_logging.py  spinner.py
progeny_core/: __init__.py  __main__.py  spinner.py  spinner_refactored.py
progeny_core/cli/: cli_main.py  cli_serve.py
tests/: test_port_manager.py  test_process_registry.py  test_prodigy_adapter.py
