[metadata]
name = progeny_core
version = 0.0.1
author = EdC
author_email = etienne@translatorswithoutborders.org
description = Spin, monitor and terminate Prodigy instances
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/E-dC/progeny-core
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
packages = progeny_core
install_requires =
    ruamel.yaml >= 0.17.20

python_requires = >=3.7

